--- a/address_clean.ipynb
+++ b/address_clean.ipynb
@@ -2,9 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jms  Plce Sydney\n",
+      "Peers  St Mlb\n",
+      "Elizabeth  St Hbart\n",
+      "Chrls  St Pth\n",
+      "Grnwich  Rd Adld\n",
+      "Pclfc  Hwy Dwn\n",
+      "Clarence  St Sydney\n",
+      "Kng  St Melbourne\n",
+      "Flndrs  Ln Melbourne\n",
+      "Lttle  Bourke St\n",
+      "Mrrywell  St Pth\n",
+      "St  Georges Trce\n",
+      "Adlde  St Brisbane\n",
+      "Crrck  Hill Rd\n",
+      "Hgh  St Toowoomba\n",
+      "Rndwck  Rd Sydney\n",
+      "Grnville  Rd Parramatta\n",
+      "Cllins  St Melbourne\n",
+      "Qeen  St Brisbane\n",
+      "Frnklin  St Adld\n",
+      "Frry  Rd Wst\n",
+      "Ann  St Brsbne\n",
+      "Edward  St Brisbane\n",
+      "George  St Prrmatta\n",
+      "Crwn  St Wllongong\n",
+      "Mttn  Bay Rd\n",
+      "Clarendn  St Sth\n",
+      "Wlliam  St Perth\n",
+      "Brrack  St Sydney\n",
+      "Mntague  St Sth\n",
+      "St  Klda Rd\n",
+      "Qeen  St Melbourne\n",
+      "Sprng  St Melbourne\n",
+      "Bnd  St Sydney\n",
+      "Wlliam  St Melbourne\n",
+      "Kng  St Pth\n",
+      "St  George’s Tce\n",
+      "Mrrison  St Hbart\n",
+      "Sth  Tce Adld\n",
+      "Smmers  St Pth\n",
+      "Wlliam  St Brsbane\n",
+      "St  Klda Rd\n",
+      "Blmore  St Sydney\n",
+      "Qeen  St Melbourne\n",
+      "Sprng  St Sydney\n",
+      "Gerge  St Prrmatta\n",
+      "Pclfc  Hwy Newcstle\n",
+      "Wlliam  St Adld\n",
+      "Sth  Tce Adld\n",
+      "Grgory  Tce Brisbane\n",
+      "Collins  Street MELBOURNE\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import string\n",
@@ -39,7 +97,7 @@
     "    return \"Unknown state\"\n",
     "\n",
     "# Load your excel file\n",
-    "df = pd.read_excel(\"C://Users//masst//OneDrive//Desktop//address Cleansing//Sample_data.xlsx\")  # replace 'your_file.xlsx' with your actual file name\n",
+    "df = pd.read_excel(\"Sample_data.xlsx\")  # replace 'your_file.xlsx' with your actual file name\n",
     "\n",
     "# Initialize empty lists to hold the postcode and state\n",
     "postcodes = []\n",
@@ -131,7 +189,7 @@
     "                elif d==\"Southern Australia\":\n",
     "                    states.append(\"SA\")\n",
     "                   \n",
-    "    t5=b1[0] + '  '+ b1[1] + ' & ' +b1[2]\n",
+    "    t5=b1[0] + '  '+ b1[1] + ' ' +b1[2]\n",
     "    print(t5)\n",
     "    addr.append(t5)\n",
     "    \n",
@@ -153,13 +211,27 @@
     "\n",
     "\n",
     "# Save the updated dataframe back to the Excel file\n",
-    "df.to_excel(\"C://Users//masst//OneDrive//Desktop//address Cleansing//Sample_data.xlsx\", index=False)\n"
+    "df.to_excel(\"Sample_data.xlsx\", index=False)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
