--- a/new_data_cleansing.ipynb
+++ b/new_data_cleansing.ipynb
@@ -63,8 +63,9 @@
     "# Sample data\n",
     "sample_data = [\n",
     "    \"7 Brrack St, Sydney, NSW 2000\",\n",
-    "    \"25 Mntague St, Sth Brisbane, QLD\",\n",
-    "    \"200a Clarendn St, Sth Melbourne, VIC 3205\"\n",
+    "    \"25 Mntague St, South Brisbane, QLD\",\n",
+    "    \"200a Clarendn St Melbourne VIC 3205\",\n",
+    "    \"Unit 8 456 Bayview Terrace Perth WA 6000\"\n",
     "]\n",
     "\n",
     "for address in sample_data:\n",
@@ -79,11 +80,121 @@
     "df['Postcode'] = postcodes\n",
     "df.replace('', np.nan, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'unit_number': '7', 'street_number': '7', 'street_name': 'Brrack St', 'street_type': None, 'suburb': '7 Brrack St, Sydney', 'state': 'New South Wales', 'postcode': '2000'}\n",
+      "{'unit_number': '25', 'street_number': '25', 'street_name': 'Mntague St', 'street_type': None, 'suburb': '25 Mntague St', 'state': 'STH', 'postcode': None}\n",
+      "{'unit_number': '200a', 'street_number': '200', 'street_name': 'a Clarendn St', 'street_type': None, 'suburb': '200a Clarendn St, Sth Melbourne', 'state': 'Victoria', 'postcode': '3205'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def load_street_types(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        return [line.strip() for line in file]\n",
+    "\n",
+    "def parse_address(address, street_types):\n",
+    "    # Regular expressions to extract different parts of the address\n",
+    "    unit_number_regex = r'^(?P<unit_number>[0-9]+[a-zA-Z]?)'\n",
+    "    street_number_regex = r'(?P<street_number>[0-9]+)'\n",
+    "    street_name_regex = r'(?P<street_name>[a-zA-Z ]+)'\n",
+    "    street_type_regex = r'(?P<street_type>[a-zA-Z]+)'\n",
+    "    suburb_state_postcode_regex = r'(?P<suburb>.*),\\s*(?P<state>[a-zA-Z]+)\\s+(?P<postcode>[0-9]+|[a-zA-Z]+)'\n",
+    "\n",
+    "    # Extract the parts of the address using regular expressions\n",
+    "    unit_number = re.search(unit_number_regex, address)\n",
+    "    street_number = re.search(street_number_regex, address)\n",
+    "    street_name = re.search(street_name_regex, address)\n",
+    "    street_type_match = re.search(street_type_regex, address)\n",
+    "    suburb_state_postcode = re.search(suburb_state_postcode_regex, address)\n",
+    "\n",
+    "    # Extract the postcode\n",
+    "    postcode = None\n",
+    "    if suburb_state_postcode:\n",
+    "        postcode_match = suburb_state_postcode.group('postcode')\n",
+    "        if postcode_match.isdigit():\n",
+    "            postcode = postcode_match\n",
+    "\n",
+    "    # Extract the street type by matching it with the predefined list of street types\n",
+    "    street_type = None\n",
+    "    if street_type_match:\n",
+    "        possible_street_type = street_type_match.group('street_type').strip().lower()\n",
+    "        if possible_street_type in street_types:\n",
+    "            street_type = possible_street_type\n",
+    "\n",
+    "    # Extract the state\n",
+    "    state = None\n",
+    "    if suburb_state_postcode:\n",
+    "        state_match = suburb_state_postcode.group('state').strip().lower()\n",
+    "        states_abbreviations = {\n",
+    "            'act': 'Australian Capital Territory',\n",
+    "            'nsw': 'New South Wales',\n",
+    "            'nt': 'Northern Territory',\n",
+    "            'qld': 'Queensland',\n",
+    "            'sa': 'South Australia',\n",
+    "            'tas': 'Tasmania',\n",
+    "            'vic': 'Victoria',\n",
+    "            'wa': 'Western Australia'\n",
+    "        }\n",
+    "\n",
+    "        state = states_abbreviations.get(state_match, state_match.upper())\n",
+    "\n",
+    "    # Return the extracted parts as a dictionary\n",
+    "    parsed_address = {\n",
+    "        \"unit_number\": unit_number.group('unit_number') if unit_number else None,\n",
+    "        \"street_number\": street_number.group('street_number') if street_number else None,\n",
+    "        \"street_name\": street_name.group('street_name').strip() if street_name else None,\n",
+    "        \"street_type\": street_type,\n",
+    "        \"suburb\": suburb_state_postcode.group('suburb').strip() if suburb_state_postcode else None,\n",
+    "        \"state\": state,\n",
+    "        \"postcode\": postcode\n",
+    "    }\n",
+    "    return parsed_address\n",
+    "\n",
+    "# Load the street types from the file\n",
+    "street_types_file_path = 'australian-postcodes.csv'\n",
+    "street_types = load_street_types(street_types_file_path)\n",
+    "\n",
+    "# Sample data\n",
+    "sample_data = [\n",
+    "    \"7 Brrack St, Sydney, NSW 2000\",\n",
+    "    \"25 Mntague St, Sth Brisbane, QLD\",\n",
+    "    \"200a Clarendn St, Sth Melbourne, VIC 3205\"\n",
+    "]\n",
+    "\n",
+    "for address in sample_data:\n",
+    "    parsed_address = parse_address(address, street_types)\n",
+    "    print(parsed_address)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
